force-app/main/default/objects/Day_Log__c/Day_Log__c.object-meta.xml
<CustomObject>
    <label>Day Log</label>
    <pluralLabel>Day Logs</pluralLabel>
    <nameField>
        <label>Day Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>DL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>