force-app/main/default/objects/Day_Log__c/fields/Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Completed_Tasks__c</fullName>
    <label>Completed Tasks</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>