force-app/main/default/objects/Day_Log__c/fields/Consistency_Score__c.field-meta.xml
<CustomField>
    <fullName>Consistency_Score__c</fullName>
    <label>Consistency Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>