force-app/main/default/objects/Day_Log__c/fields/Discipline_Score__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Score__c</fullName>
    <label>Discipline Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>