force-app/main/default/objects/Day_Log__c/fields/Health_Score__c.field-meta.xml
<CustomField><fullName>Health_Score__c</fullName><label>Health Score</label><type>Number</type><precision>5</precision><scale>2</scale><externalId>false</externalId></CustomField>