force-app/main/default/objects/Day_Log__c/fields/Reflection__c.field-meta.xml
<CustomField>
    <fullName>Reflection__c</fullName>
    <label>Reflection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>