force-app/main/default/objects/Day_Log__c/fields/Score__c.field-meta.xml
<CustomField><fullName>Score__c</fullName><label>Score</label><type>Number</type><precision>5</precision><scale>2</scale><externalId>false</externalId></CustomField>