force-app/main/default/objects/Day_Log__c/fields/User_Account__c.field-meta.xml
<CustomField>
    <fullName>User_Account__c</fullName>
    <label>User Account</label>
    <type>Lookup</type>
    <referenceTo>UserAccount__c</referenceTo>
    <relationshipLabel>Day Logs</relationshipLabel>
    <relationshipName>Day_Logs</relationshipName>
    <required>true</required>
</CustomField>